--- a/PortalGamerX/Background.css
+++ b/PortalGamerX/Background.css
@@ -1,7 +1,7 @@
 body {
   border-radius: 20px;
   background-size: cover;
-  background-color: #d0c9d4;
+  background-color: #ffffff;
   overflow-x: hidden;
   margin: 0;
   font-family: Arial, sans-serif;
@@ -53,7 +53,7 @@ body::-webkit-scrollbar-thumb {
   left: 0;
   right: 0;
   height: 30%; /* Altura do degradê */
-  background: linear-gradient(to bottom, rgba(208, 201, 212, 0), #d0c9d4);
+  background: linear-gradient(to bottom, rgba(208, 201, 212, 0), #ffffff);
 }
 
 
