--- a/PortalGamerX/Background.css
+++ b/PortalGamerX/Background.css
@@ -58,13 +58,30 @@ body::-webkit-scrollbar-thumb {
 
 
 /* Barra de Pesquisa*/
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
 
-input{
-  position: relative;
-  border-radius: 10px;
-  transform: translate(450px);
+input.Pesquisar {
+  margin-top: 55px;
   width: 500px;
-  height: auto;
-  margin-top: 80px;
+  height: 20px;
+  padding: 10px;
+  border: 3px solid #6f40f0;
+  border-radius: 25px;
+  font-size: 18px;
+  outline: none;
+  transition: all 0.3s ease;
+}
 
+input.Pesquisar::placeholder {
+  color: #000000;
+}
+
+input.Pesquisar:focus {
+  border-color: yellow;
+  box-shadow: 0 0 10px rgba(128, 0, 0, 0.548);
 }
